# london-insurance-risk

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AUDIT.md  CLAUDE.md  DATA_PROVENANCE_AND_TRANSFORMS.md  Dockerfile  INTERVIEW_PREP_QA.md  M5_CHANGES.md  M5_PLAN.md  M5_POLISH_PLAN.md  MODEL_REVIEW.md  Makefile  NEXT_PHASE_DESIGN.md  PHASE1_PLAN.md  PHASE2_PLAN.md  PHASE3_PLAN.md  PHASE4_PLAN.md  PLAN.md  PROJECT_TECHNICAL_OVERVIEW.md  README.md  ROADMAP.md  SHOWCASE_PLAN.md  STATUS.md  docker-compose.yml  implementation_plan.md  project_overview.md  pyproject.toml  walkthrough.md
.github/workflows/: deploy-pages.yml
config/: config.yaml
data/manual/: wtw_anchors_notes.md  wtw_anchors_panel.csv
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/data/: methodology.json
frontend/src/: AboutPanel.tsx  App.tsx  DetailPanel.tsx  MapView.tsx  RankingsPanel.tsx  Sidebar.tsx  api.ts  index.css  types.ts  utils.ts
src/api/: main.py
src/calibrate/: calibrate.py  wtw_index.py
src/common/: config.py  geo.py  http.py  io.py
src/ingest/: aadf.py  boundaries.py  census_demographics.py  flood.py  imd.py  onspd.py  police_crime.py  scotland_crime.py  stats19.py  traffic.py
src/showcase/: bake_static.py
src/transform/: aggregate_to_lsoa.py  build_risk_index.py
src/viz/: README.md
tests/: test_aadf.py  test_aggregate.py  test_api.py  test_build_risk_index.py  test_calibrate.py  test_census_demographics.py  test_flood.py  test_phase3_aggregate.py  test_serve_consistency.py  test_smoke.py  test_traffic.py
(+2 files in other folders)
