[project]
name = "london-insurance-risk"
version = "0.1.0"
description = "Composite open-data territory-risk score for London, calibrated to the WTW/Confused price index."
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "geopandas>=1.0",
  "shapely>=2.0",
  "pyarrow>=17.0",
  "duckdb>=1.0",
  "requests>=2.32",
  "pydantic-settings>=2.3",
  "pyyaml>=6.0",
  "scikit-learn>=1.5",
  "statsmodels>=0.14",
  "fastapi>=0.110",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
